--- a/src/app/components/task-manager/task-details/task-details.component.html
+++ b/src/app/components/task-manager/task-details/task-details.component.html
@@ -1,3 +1,15 @@
-<p>
-  task-details works!
-</p>
+
+<div class="card card-header">
+    <h4>Task Details</h4>
+</div>
+
+<div class="card card-body">
+    <div>Task ID : {{task.id}}</div>
+    <hr>
+    <div>Task Title : {{task.title}}</div>
+    <hr>
+    <div>Task Status : {{task.status}}</div>
+    <hr>
+    <div>Task Date : {{task.date}}</div>
+    <hr>
+</div>
