--- a/src/app/components/task-manager/task-form/task-form.component.html
+++ b/src/app/components/task-manager/task-form/task-form.component.html
@@ -1,7 +1,7 @@
 <form (submit)="Add($event)">
     <div class="form-group">
         <label for="task">Task Name</label>
-        <input type="text" name="task" id="task" class="form-control" placeholder="Enter Task" [(ngModel)]="task">
+        <input type="text" name="task" id="task" class="form-control" placeholder="Enter Task" [(ngModel)]="task" required>
     </div>
     <button class="btn btn-danger">Add Task</button>
 </form>
