--- a/src/app/components/task-manager/task-list/task-item/task-item.component.html
+++ b/src/app/components/task-manager/task-list/task-item/task-item.component.html
@@ -1,3 +1,3 @@
 {{ task.title }}
-<button class="btn btn-danger float-right ml-3">Delete</button>
-<button class="btn btn-dark float-right">Details</button>
+<button class="btn btn-danger float-right ml-3" (click)="Delete()">Delete</button>
+<a class="btn btn-dark float-right" routerLink="/task/{{task.id}}">Details</a>
